fix: enhance 404 page script for improved URL normalization and redirection

--- a/404.md
+++ b/404.md
@@ -10,12 +10,35 @@ hero_image: "/assets/images/broken bridge.jpg"
 hero_height: is-fullheight-with-navbar
 permalink: /404.html
 ---
+
+
 <script>
-    currentURL = window.location.href;
+  (function () {
+    const currentURL = window.location.href;
+    const lowerCaseURL = currentURL.toLowerCase();
 
-    lowerCaseURL = currentURL.toLowerCase();
-
-    if (currentURL != lowerCaseURL) {
-        location.replace(lowerCaseURL);
+    // Step 1: Normalize to lowercase if needed
+    if (currentURL !== lowerCaseURL) {
+      location.replace(lowerCaseURL);
+      return;
     }
+
+    // Step 2: If on a /de path and this is a 404 page, redirect to non-/de version
+    const path = window.location.pathname;
+    const search = window.location.search;
+    const hash = window.location.hash;
+
+    const isDePath = path.startsWith('/de');
+
+    // This assumes the script runs only on the 404 page
+    if (isDePath) {
+      const fallbackPath = path.replace(/^\/de/, '') || '/';
+      const fallbackURL = fallbackPath + search + hash;
+
+      // Optional: delay to allow 404 page to render briefly
+      setTimeout(() => {
+        window.location.replace(fallbackURL);
+      }, 500);
+    }
+  })();
 </script>
