--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ layout: page
 title: '<img src="/assets/images/explicit consulting, color on transparent, company and slogan.png" alt="ExplicIT Consulting. We bridge the gap." style="height: 3em; object-fit: contain;"> <!--HTML 404-->'
 subtitle: |
   <span class="subtitle is-4 has-text-white">
-    <br>Well, we clearly could not bridge this gap…<br>If you think that there is an error on our side, please <a href="mailto:set-outlooksignatures@explicitconsulting.at"><button class="button is-link is-normal is-hover has-text-black has-text-weight-bold" style="background-color: lawngreen">➔ let us know</button></a>.<br><br><br><br><br><br>
+    <br>Well, we clearly could not bridge this gap…<br>If you think that there is an error on our side, please <a href="mailto:set-outlooksignatures@explicitconsulting.at"><button class="button is-link is-normal is-hover has-text-black has-text-weight-bold" style="background-color: limegreen">➔ let us know</button></a>.<br><br><br><br><br><br>
   </p>
 description: HTTP error 404. Site not found. Sorry.
 hero_image: "/assets/images/broken bridge.jpg"
