refactor: use polyglot

--- a/404.md
+++ b/404.md
@@ -8,7 +8,7 @@ subtitle: |
 description: HTTP error 404. Site not found. Sorry.
 hero_image: "/assets/images/broken bridge.jpg"
 hero_height: is-fullheight-with-navbar
-permalink: /404.html
+permalink: /404
 sitemap: false
 ---
 
