--- a/404.de.md
+++ b/404.de.md
@@ -1,15 +1,17 @@
 ---
 layout: page
+lang: de
+locale: de
 title: '<img src="/assets/images/explicit consulting, color on transparent, company and slogan.png" alt="ExplicIT Consulting. We bridge the gap." class="mb-2" style="height: 3em; object-fit: contain; margin-left:-0.25em;"><!--ExplicIT Consulting. We bridge the gap.-->'
 subtitle: |
   <p class="subtitle is-4 has-text-white mt-6 mb-2">
-    <span style="background-color: rgba(0, 0, 0, 0.4);">Well, we clearly could not bridge this gap…</span>
+    <span style="background-color: rgba(0, 0, 0, 0.4);">Tja, diese Lücke konnten wir eindeutig nicht schließen…</span>
   </p>
 
   <p class="subtitle is-4 has-text-white mt-2 mb-2">
-    <span style="background-color: rgba(0, 0, 0, 0.4);">If you think that there is an error on our end:</span> <a href="mailto:set-outlooksignatures@explicitconsulting.at" class="button is-link is-normal is-hovered has-text-black has-text-weight-bold" style="background-color: limegreen">➔ Let us know</a>
+    <span style="background-color: rgba(0, 0, 0, 0.4);">Wenn Sie glauben, dass auf unserer Seite ein Fehler vorliegt:</span> <a href="mailto:set-outlooksignatures@explicitconsulting.at" class="button is-link is-normal is-hovered has-text-black has-text-weight-bold" style="background-color: limegreen">➔ Lassen Sie es uns wissen</a>
   </p>
-description: HTTP error 404. Site not found. Tut uns leid.
+description: HTTP Fehler 404. Seite nicht gefunden. Sorry.
 hero_image: "/assets/images/broken bridge.jpg"
 hero_height: is-fullheight-with-navbar
 hero_darken: true
