refactor: Removed arrow symbols (➔) from button texts in various markdown files to streamline the user interface.

--- a/404.de.md
+++ b/404.de.md
@@ -9,7 +9,7 @@ subtitle: |
   </p>
 
   <p class="subtitle is-4 has-text-white mt-2 mb-2">
-    <span style="background-color: rgba(0, 0, 0, 0.4);">Wenn Sie glauben, dass auf unserer Seite ein Fehler vorliegt:</span> <a href="mailto:set-outlooksignatures@explicitconsulting.at" class="button is-link is-normal is-hovered has-text-black has-text-weight-bold" style="background-color: limegreen">➔ Lassen Sie es uns wissen</a>
+    <span style="background-color: rgba(0, 0, 0, 0.4);">Wenn Sie glauben, dass auf unserer Seite ein Fehler vorliegt:</span> <a href="mailto:set-outlooksignatures@explicitconsulting.at" class="button is-link is-normal is-hovered has-text-black has-text-weight-bold" style="background-color: limegreen">Lassen Sie es uns wissen</a>
   </p>
 description: HTTP Fehler 404. Seite nicht gefunden. Sorry.
 hero_image: "/assets/images/broken bridge.jpg"
