--- a/_posts/2025-10-19-test.de.md
+++ b/_posts/2025-10-19-test.de.md
@@ -7,4 +7,6 @@ date: 2025-10-19 12:15:00
 categories: test
 description: Das ist eine Beschreibung
 published: true
+page_id: "blog-2025-10-19-test"
+permalink: /blog/2025-10-19-test
 ---
