--- a/_posts/2025-10-19-test.en.md
+++ b/_posts/2025-10-19-test.en.md
@@ -8,5 +8,5 @@ categories: test
 description: This is a description
 published: true
 page_id: "blog-2025-10-19-test"
-permalink: /blog/2025-10-19-test
+permalink: /blog/2025-10-19-test/
 ---
