--- a/blog/_posts/2025-10-18-test-de.md
+++ b/blog/_posts/2025-10-18-test-de.md
@@ -4,6 +4,7 @@ lang: de
 locale: de
 title: Das ist ein Test
 description: Das ist eine Beschreibung
+image: none
 published: true
 ---
 Das ist ein Test-Eintrag.
