--- a/blog/_posts/2025-10-18-test-en.md
+++ b/blog/_posts/2025-10-18-test-en.md
@@ -4,6 +4,7 @@ lang: en
 locale: en
 title: This is a test
 description: This is a description
+image: none
 published: true
 ---
 This is a test entry.
