--- a/blog/_posts/2025-10-18-test.de.md
+++ b/blog/_posts/2025-10-18-test.de.md
@@ -6,5 +6,6 @@ title: Das ist ein Test
 description: Das ist eine Beschreibung
 image: none
 published: true
+page_id: "2025-10-18-test"
 ---
 Das ist ein Test-Eintrag.
