--- a/blog/_posts/2025-10-18-test.en.md
+++ b/blog/_posts/2025-10-18-test.en.md
@@ -6,5 +6,6 @@ title: This is a test
 description: This is a description
 image: none
 published: true
+page_id: "2025-10-18-test"
 ---
 This is a test entry.
