--- a/blog/_posts/2025-10-18-test.en.md
+++ b/blog/_posts/2025-10-18-test.en.md
@@ -7,5 +7,6 @@ description: This is a description
 image: none
 published: true
 page_id: "2025-10-18-test"
+permalink: /blog/2025/10/18/test
 ---
 This is a test entry.
