--- a/blog/_posts/2025-10-18-v4.23.0.de.md
+++ b/blog/_posts/2025-10-18-v4.23.0.de.md
@@ -6,6 +6,8 @@ title: "Neue Version veröffentlicht: v4.23.0"
 description: "Formatieren von Addressen und Telefonnummern leicht gemacht"
 image: none
 published: true
+author: Markus Gruber
+tags: ["new release"]
 page_id: "2025-10-18-v4.23.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
