--- a/blog/_posts/2025-10-18-v4.23.0.en.md
+++ b/blog/_posts/2025-10-18-v4.23.0.en.md
@@ -6,6 +6,8 @@ title: "New version released: v4.23.0"
 description: "Address and phone number formatting made easy"
 image: none
 published: true
+author: Markus Gruber
+tags: ["new release"]
 page_id: "2025-10-18-v4.23.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
