--- a/blog/_posts/2025-10-18-v4.23.0.de.md
+++ b/blog/_posts/2025-10-18-v4.23.0.de.md
@@ -11,7 +11,7 @@ tags: ["new release"]
 page_id: "2025-10-18-v4.23.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
-## Release v4.23.0: Ade Formatierungs-Stress, Servus globale Standards
+## Adé Formatierungs-Stress für Adressen und Telefonnummern, servus globale Standards
 
 **Set-OutlookSignatures v4.23.0** ist da und liefert ein großes Update, das sich auf zwei gängige – und überraschend komplizierte – Stolpersteine in der globalen IT konzentriert: Die **perfekte Formatierung von Telefonnummern und Postanschriften**.
 
