--- a/blog/_posts/2025-10-18-v4.23.0.en.md
+++ b/blog/_posts/2025-10-18-v4.23.0.en.md
@@ -11,7 +11,7 @@ tags: ["new release"]
 page_id: "2025-10-18-v4.23.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
-## Release v4.23.0: Goodbye formatting headaches, hello global standards
+## Goodbye formatting headaches with addresses and phone numbers, hello global standards
 **Set-OutlookSignatures v4.23.0** is here, delivering a major upgrade focused on two common — and surprisingly complex — pain points in global IT: Perfectly formatting phone numbers and postal addresses.
 
 This release integrates world-class open-source libraries to ensure your organization's contact information is globally correct and consistently professional in every signature.
