--- a/blog/_posts/2025-10-18-v4.23.0.md
+++ b/blog/_posts/2025-10-18-v4.23.0.md
@@ -2,8 +2,8 @@
 layout: post
 lang: en
 locale: en
-title: "New version v4.23.0 released"
-description: "Address and phone number formatting made easy"
+title: "New release v4.23.0"
+description: "Formatting address and phone number made easy"
 image: none
 published: true
 author: Markus Gruber
