--- a/blog/_posts/de/2025-10-18-v4.23.0.md
+++ b/blog/_posts/de/2025-10-18-v4.23.0.md
@@ -2,7 +2,7 @@
 layout: post
 lang: de
 locale: de
-title: "Neue Version v4.23.0 veröffentlicht"
+title: "Neue Version v4.23.0"
 description: "Formatieren von Addressen und Telefonnummern leicht gemacht"
 image: none
 published: true
