--- a/blog/_posts/2025-10-18-v4.23.0.md
+++ b/blog/_posts/2025-10-18-v4.23.0.md
@@ -11,12 +11,12 @@ tags: ["new release"]
 page_id: "2025-10-18-v4.23.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
-## Goodbye formatting headaches with addresses and phone numbers, hello global standards
+### Goodbye formatting headaches with addresses and phone numbers, hello global standards
 Set-OutlookSignatures v4.23.0 is here, delivering a major upgrade focused on two common — and surprisingly complex — pain points in global IT: Perfectly formatting phone numbers and postal addresses.
 
 This release integrates world-class open-source libraries to ensure your organization's contact information is globally correct and consistently professional in every signature.
 
-## Perfect Phone Numbers, Effortlessly
+### Perfect Phone Numbers, Effortlessly
 We think phone numbers are easy because we assume they are just numbers and forget about global complexity. If you still think so, reading the article '[Falsehoods Programmers Believe About Phone Numbers](https://set-outlooksignatures.com/faq/#4412-format-phone-numbers)' will change your mind.
 
 We've added a new phone number formatter based on Google's libphonenumber library.
@@ -30,7 +30,7 @@ New replacement variables, such as '`$CurrentUserTelephone-International$`' and 
 
 For implementation details, see our [Format Phone Numbers FAQ](https://set-outlooksignatures.com/faq/#4412-format-phone-numbers).
 
-## Accurate postal addresses for any country
+### Accurate postal addresses for any country
 Just like phone numbers, postal addresses seem like child's play - if you're only working nationally. However, "Different countries, different customs". Read the article '[Falsehoods programmers believe about addresses](https://set-outlooksignatures.com/faq/#4413-format-postal-addresses)' to understand the global chaos we've tamed.
 
 A new Address Formatter module, based on OpenCage GmbH's work, ensures addresses are assembled according to country-specific rules.
@@ -39,7 +39,7 @@ Input named address components (over 20 available) and the country code to outpu
 
 For implementation details, see our [Format Postal Addresses FAQ](https://set-outlooksignatures.com/faq/#4413-format-postal-addresses).
 
-## Other Key Changes
+### Other key changes
 * QR Code Update: The sample QR code format has changed from MeCard to the more common vCard format.
 * Security: Added a check for PowerShell Full Language Mode to all administrative scripts.
 * Fix: Corrected an issue with culture-aware sorting in the Intune remediation sample script.
