--- a/blog/_posts/2025-10-18-v4.23.0.md
+++ b/blog/_posts/2025-10-18-v4.23.0.md
@@ -16,7 +16,7 @@ Set-OutlookSignatures v4.23.0 is here, delivering a major upgrade focused on two
 
 This release integrates world-class open-source libraries to ensure your organization's contact information is globally correct and consistently professional in every signature.
 
-### Perfect Phone Numbers, Effortlessly
+### Perfect phone numbers, effortlessly
 We think phone numbers are easy because we assume they are just numbers and forget about global complexity. If you still think so, reading the article '[Falsehoods Programmers Believe About Phone Numbers](https://set-outlooksignatures.com/faq/#4412-format-phone-numbers)' will change your mind.
 
 We've added a new phone number formatter based on Google's libphonenumber library.
