docs(blog): typos

--- a/blog/_posts/de/2025-08-15-v4.21.0.md
+++ b/blog/_posts/de/2025-08-15-v4.21.0.md
@@ -11,7 +11,7 @@ tags: ["new release"]
 page_id: "2025-08-15-v4.21.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
-## Neue Funktionen für das Outlook-Add-In:
+## Neue Funktionen für das Outlook-Add-In
 - Reagiert auf die Ereignisse OnMessageRecipientsChanged und OnAppointmentAttendeesChanged.
 - Fügen Sie dem Add-In benutzerdefinierten Code hinzu, um direkt zu beeinflussen, welche Signatur verwendet wird.  
   Sie können beispielsweise eine bestimmte Signatur festlegen…
