--- a/blog/_posts/2025-08-15-v4.21.0.md
+++ b/blog/_posts/2025-08-15-v4.21.0.md
@@ -11,7 +11,7 @@ tags: ["new release"]
 page_id: "2025-08-15-v4.21.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
-## New features for the Outlook add-in:
+## New features for the Outlook add-in
 - React to launch events OnMessageRecipientsChanged and OnAppointmentAttendeesChanged.
 - Allow adding custom code to the add-in so you can directly influence which signature it will set.  
   For example, you can set a specific signature…
