docs(blog): update permalink definition and files names

--- a/blog/_posts/2025-06-26-v4.20.1.de.md
+++ b/blog/_posts/2025-06-26-v4.20.1.de.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-06-26-v4.20.1"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: /blog/:year/:month/:day/:page_id/
 ---
 ## Korrekturen zur Bereinigung von Signaturen
 Dieser Hotfix behebt Probleme mit den Parametern '`DeleteScriptCreatedSignaturesWithoutTemplate`' und '`DeleteUserCreatedSignatures`'.
