--- a/blog/_posts/2025-06-26-v4.20.1.en.md
+++ b/blog/_posts/2025-06-26-v4.20.1.en.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-06-26-v4.20.1"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: /blog/:year/:month/:day/:page_id/
 ---
 ## Corrections for cleaning up signatures
 This hotfix resolves issues with the parameters '`DeleteScriptCreatedSignaturesWithoutTemplate`' and '`DeleteUserCreatedSignatures`'.
