--- a/blog/_posts/2025-07-17-v4.20.3.de.md
+++ b/blog/_posts/2025-07-17-v4.20.3.de.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-07-17-v4.20.3"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: /blog/:year/:month/:day/:page_id/
 ---
 ## Korrekturen für PowerShell-Eigenheiten und SimulateAndDeploy
 - Hinzufügen einer Problemumgehung für PowerShell 5.1, das Arrays bei der Übergabe über den InputObject-Parameter nicht korrekt in JSON konvertiert. (<a href="https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/issues/136" target="_blank">#136</a>)
