--- a/blog/_posts/2025-08-12-v4.20.4.de.md
+++ b/blog/_posts/2025-08-12-v4.20.4.de.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-08-12-v4.20.4"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: /blog/:year/:month/:day/:page_id/
 ---
 ## Behebung von Änderungen in der Roaming-Signaturen-API von Microsoft
 - Hinzufügen einer Problemumgehung für interne Probleme von Microsoft mit der Roaming-Signaturen-API, die beim Hochladen von Roaming-Signaturen in Postfächer, die nicht denen des angemeldeten Benutzers entsprechen (insbesondere im SimulateAndDeploy-Modus), zu folgendem Fehler führen würden. Das Protokoll würde den Fehler 'Der Antwortstatuscode für die Aktion https://localhost:444/owa/service.svc?action=SanitizeHtml \u0027SanitizeHtml\u0027 lautet InternalServerError. ReasonPhrase:Internal Server Error' enthalten.
