--- a/blog/_posts/2025-09-05-v4.22.0.de.md
+++ b/blog/_posts/2025-09-05-v4.22.0.de.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-09-05-v4.22.0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: /blog/:year/:month/:day/:page_id/
 ---
 ## Weitere Anpassungsmöglichkeiten für das Outlook-Add-In
 Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das Outlook Add-In:
