--- a/blog/_posts/2025-10-18-v4.23.0.de.md
+++ b/blog/_posts/2025-10-18-v4.23.0.de.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-10-18-v4.23.0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: /blog/:year/:month/:day/:page_id/
 ---
 ## Adieu Formatierungs-Stress für Adressen und Telefonnummern, servus globale Standards
 Set-OutlookSignatures v4.23.0 ist da und liefert ein großes Update, das sich auf zwei gängige – und überraschend komplizierte – Stolpersteine in der globalen IT konzentriert: Die perfekte Formatierung von Telefonnummern und Postanschriften.
