--- a/blog/_posts/2025-10-18-v4.23.0.en.md
+++ b/blog/_posts/2025-10-18-v4.23.0.en.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-10-18-v4.23.0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: /blog/:year/:month/:day/:page_id/
 ---
 ## Goodbye formatting headaches with addresses and phone numbers, hello global standards
 Set-OutlookSignatures v4.23.0 is here, delivering a major upgrade focused on two common — and surprisingly complex — pain points in global IT: Perfectly formatting phone numbers and postal addresses.
