--- a/blog/_posts/2025-07-08-v4.20.2.en.md
+++ b/blog/_posts/2025-07-08-v4.20.2.en.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-07-08-v4.20.2"
-permalink: /blog/:year/:month/:day/:page_id/
+permalink: /blog/:year/:month/:day/:slug/
 ---
 ## Update handling of the '@' character in signatures names
 Microsoft no longer allows '@' in roaming signature names as it is reserved for internal use, and Microsoft Outlook will follow soon.
