--- a/blog/_posts/2025-09-05-v4.22.0.en.md
+++ b/blog/_posts/2025-09-05-v4.22.0.en.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-09-05-v4.22.0"
-permalink: /blog/:year/:month/:day/:page_id/
+permalink: /blog/:year/:month/:day/:slug/
 ---
 ## More Outlook add-in customization
 The v4.22.0 release brings major changes and customization features to the Outlook add-in:
