--- a/blog/_posts/2025-07-17-v4.20.3.en.md
+++ b/blog/_posts/2025-07-17-v4.20.3.en.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-07-17-v4.20.3"
-permalink: /blog/:year/:month/:day/:page_id/
+permalink: /blog/:year/:month/:day/:slug/
 ---
 ## Fixes for PowerShell quirks and SimulateAndDeploy
 - Add a workaround for PowerShell 5.1 not correctly converting arrays to JSON when passing them via the InputObject parameter. (<a href="https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/issues/136" target="_blank">#136</a>)
