--- a/blog/_posts/2025-08-15-v4.21.0.de.md
+++ b/blog/_posts/2025-08-15-v4.21.0.de.md
@@ -9,7 +9,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 page_id: "2025-08-15-v4.21.0"
-permalink: /blog/:year/:month/:day/:page_id/
+permalink: /blog/:year/:month/:day/:slug/
 ---
 ## Neue Funktionen für das Outlook-Add-In
 - Reagiert auf die Ereignisse OnMessageRecipientsChanged und OnAppointmentAttendeesChanged.
