docs(blog): update permalink definition and files names

--- a/blog/_posts/2025-06-26-v4.20.1.en.md
+++ b/blog/_posts/2025-06-26-v4.20.1.en.md
@@ -2,7 +2,7 @@
 layout: post
 lang: en
 locale: en
-title: "New release v4.20.1"
+title: "New hotfix release v4.20.1"
 description: "Corrections for cleaning up signatures"
 image: none
 published: true
