--- a/blog/_posts/2025-07-08-v4.20.2.en.md
+++ b/blog/_posts/2025-07-08-v4.20.2.en.md
@@ -2,7 +2,7 @@
 layout: post
 lang: en
 locale: en
-title: "New release v4.20.2"
+title: "New hotfix release v4.20.2"
 description: "Update handling of the '@' character in signatures names"
 image: none
 published: true
