--- a/blog/_posts/2025-07-17-v4.20.3.en.md
+++ b/blog/_posts/2025-07-17-v4.20.3.en.md
@@ -2,7 +2,7 @@
 layout: post
 lang: en
 locale: en
-title: "New release v4.20.3"
+title: "New hotfix release v4.20.3"
 description: "Fixes for PowerShell quirks and SimulateAndDeploy"
 image: none
 published: true
