--- a/blog/_posts/2025-08-12-v4.20.4.en.md
+++ b/blog/_posts/2025-08-12-v4.20.4.en.md
@@ -2,7 +2,7 @@
 layout: post
 lang: en
 locale: en
-title: "New release v4.20.4"
+title: "New hotfix release v4.20.4"
 description: " Addressing changes in Microsofts roaming signatures API"
 image: none
 published: true
