--- a/blog/_posts/2025-09-05-v4.22.0.de.md
+++ b/blog/_posts/2025-09-05-v4.22.0.de.md
@@ -12,7 +12,9 @@ page_id: "2025-09-05-v4.22.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
 ## Weitere Anpassungsmöglichkeiten für das Outlook-Add-In
-Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das Outlook Add-In:
+Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das Outlook Add-In.
+
+Im Detail:
 - Mit benutzerdefinierten Regeln kann nun mithilfe der neuen Eigenschaft 'customRulesResultSignatureBody' (verfügbar für Exchange Online) ein vollständig angepasster Signaturtext festgelegt werden.
 - Die Eigenschaften '`graphAccessToken`' und '`graphApiEndpoint`' wurden zu den benutzerdefinierten Regeln hinzugefügt, sodass die Graph-API für erweiterte Logik (z. B. Benutzereigenschaften, Gruppenmitgliedschaft) direkt abgefragt werden kann.
 - Der Text der Benachrichtigung nach der Signatur kann mit der neuen Variablen '`customRulesResultNotification`' festgelegt werden.
