--- a/blog/_posts/2025-08-15-v4.21.0.de.md
+++ b/blog/_posts/2025-08-15-v4.21.0.de.md
@@ -12,6 +12,9 @@ page_id: "2025-08-15-v4.21.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
 ## Neue Funktionen für das Outlook-Add-In
+Neue LaunchEvents und benutzerdefinierter Code zur Auswahl von Signaturen.
+
+Im Detail:
 - Reagiert auf die Ereignisse OnMessageRecipientsChanged und OnAppointmentAttendeesChanged.
 - Fügen Sie dem Add-In benutzerdefinierten Code hinzu, um direkt zu beeinflussen, welche Signatur verwendet wird.  
   Sie können beispielsweise eine bestimmte Signatur festlegen…
