--- a/blog/_posts/2025-09-05-v4.22.0.md
+++ b/blog/_posts/2025-09-05-v4.22.0.md
@@ -12,9 +12,7 @@ page_id: "2025-09-05-v4.22.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
 ## More Outlook add-in customization
-The v4.22.0 release brings major changes and customization features to the Outlook add-in.
-
-In detail:
+The v4.22.0 release brings major changes and customization features to the Outlook add-in:
 - Custom rules can now set a completely customized signature body using the new '`customRulesResultSignatureBody`' property, available for Exchange Online.
 - Added '`graphAccessToken`' and '`graphApiEndpoint`' properties to custom rules, allowing direct querying of the Graph API for advanced logic (e.g., user properties, group membership).
 - The text of the post-signature notification can be set using the new '`customRulesResultNotification`' variable.
