docs(blog): update post-card formatting

--- a/blog/_posts/de/2025-10-18-v4.23.0.md
+++ b/blog/_posts/de/2025-10-18-v4.23.0.md
@@ -12,7 +12,7 @@ page_id: "2025-10-18-v4.23.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
 ## Adieu Formatierungs-Stress für Adressen und Telefonnummern, servus globale Standards
-Set-OutlookSignatures v4.23.0 ist da und liefert ein großes Update, das sich auf zwei gängige – und überraschend komplizierte – Stolpersteine in der globalen IT konzentriert: Die perfekte Formatierung von Telefonnummern und Postanschriften.
+Set-OutlookSignatures v4.23.0 ist da und liefert ein großes Update, das sich auf zwei gängige - und überraschend komplizierte – Stolpersteine in der globalen IT konzentriert: Die perfekte Formatierung von Telefonnummern und Postanschriften.
 
 Dieses Release integriert Top-Open-Source-Bibliotheken, damit die Kontaktdaten in Ihrer Firma überall auf der Welt sauber, korrekt und professionell in jeder Signatur ausschauen.
 
