--- a/blog/_posts/2025-10-18-v4.23.0.md
+++ b/blog/_posts/2025-10-18-v4.23.0.md
@@ -12,7 +12,7 @@ page_id: "2025-10-18-v4.23.0"
 permalink: /blog/:year/:month/:day/:slug/
 ---
 ## Goodbye formatting headaches with addresses and phone numbers, hello global standards
-Set-OutlookSignatures v4.23.0 is here, delivering a major upgrade focused on two common — and surprisingly complex — pain points in global IT: Perfectly formatting phone numbers and postal addresses.
+Set-OutlookSignatures v4.23.0 is here, delivering a major upgrade focused on two common - and surprisingly complex - pain points in global IT: Perfectly formatting phone numbers and postal addresses.
 
 This release integrates world-class open-source libraries to ensure your organization's contact information is globally correct and consistently professional in every signature.
 
