docs(blog): 2025-09-15-docx-vs-html

--- a/blog/_posts/2025-06-26-v4.20.1.md
+++ b/blog/_posts/2025-06-26-v4.20.1.md
@@ -17,3 +17,5 @@ This hotfix resolves issues with the parameters '`DeleteScriptCreatedSignaturesW
 While '`DeleteScriptCreatedSignaturesWithoutTemplate`' did not delete obsolete signatures, the same error in the code caused '`DeleteUserCreatedSignatures`' (disabled by default) to delete even non-user signatures.
 
 A comprehensive list of all changes, dependencies, and bug fixes can be found in the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
+
+Interested in learning more or seeing our solution in action? [Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
