--- a/blog/_posts/2025-09-05-v4.22.0.md
+++ b/blog/_posts/2025-09-05-v4.22.0.md
@@ -33,3 +33,5 @@ The v4.22.0 release brings major changes and customization features to the Outlo
 - Added comments to the '`manifest.xml`' to clarify mailbox requirements and permissions.
 
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
+
+Interested in learning more or seeing our solution in action? [Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
