--- a/blog/_posts/de/2025-06-18-v4.20.0.md
+++ b/blog/_posts/de/2025-06-18-v4.20.0.md
@@ -38,3 +38,5 @@ Set-OutlookSignatures wird jetzt mit UTF.Unknown für die Codierungserkennung ge
 - MSAL.Net 4.73.0, PreMailer.Net 2.7.0, HtmlAgilityPack 1.12.1, QRCoder 1.6.0.
 
 Eine umfassende Liste aller Änderungen, Abhängigkeiten und Fehlerbehebungen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
+
+Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen? [Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
