--- a/blog/_posts/de/2025-06-26-v4.20.1.md
+++ b/blog/_posts/de/2025-06-26-v4.20.1.md
@@ -17,3 +17,5 @@ Dieser Hotfix behebt Probleme mit den Parametern '`DeleteScriptCreatedSignatures
 Während '`DeleteScriptCreatedSignaturesWithoutTemplate`' keine veralteten Signaturen löschte, führte derselbe Fehler im Code dazu, dass '`DeleteUserCreatedSignatures`' (standardmäßig deaktiviert) sogar Nicht-Benutzersignaturen löschte.
 
 Eine umfassende Liste aller Änderungen, Abhängigkeiten und Fehlerbehebungen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
+
+Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen? [Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
