--- a/blog/_posts/2025-06-18-v4.20.0.md
+++ b/blog/_posts/2025-06-18-v4.20.0.md
@@ -38,3 +38,5 @@ Set-OutlookSignatures now comes bundled with UTF.Unknown for encoding detection.
 - MSAL.Net 4.73.0, PreMailer.Net 2.7.0, HtmlAgilityPack 1.12.1, QRCoder 1.6.0.
 
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
+
+Interested in learning more or seeing our solution in action? [Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
