--- a/blog/_posts/2025-07-17-v4.20.3.md
+++ b/blog/_posts/2025-07-17-v4.20.3.md
@@ -17,3 +17,5 @@ permalink: /blog/:year/:month/:day/:slug/
 - Add a workaround for PowerShell not reliably resolving SMB paths with relative parts to absolute paths in the MSAL.PS module.
 
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
+
+Interested in learning more or seeing our solution in action? [Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
