--- a/blog/_posts/2025-08-12-v4.20.4.md
+++ b/blog/_posts/2025-08-12-v4.20.4.md
@@ -16,3 +16,5 @@ permalink: /blog/:year/:month/:day/:slug/
 - Add hints about probable root causes of empty signatures lists in the log output of the Outlook add-in.
 
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
+
+Interested in learning more or seeing our solution in action? [Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
