--- a/blog/_posts/2025-08-15-v4.21.0.md
+++ b/blog/_posts/2025-08-15-v4.21.0.md
@@ -27,3 +27,5 @@ New launch events and custom code support:
 See '`.\sample code\CustomRulesCode.js`' in the Outlook add-in folder for details.
 
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
+
+Interested in learning more or seeing our solution in action? [Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
