--- a/blog/_posts/de/2025-08-12-v4.20.4.md
+++ b/blog/_posts/de/2025-08-12-v4.20.4.md
@@ -16,3 +16,5 @@ permalink: /blog/:year/:month/:day/:slug/
 - Hinzufügen von Hinweisen zu möglichen Ursachen für leere Signaturlisten in der Protokollausgabe des Outlook-Add-Ins.
 
 Eine umfassende Liste aller Änderungen, Abhängigkeiten und Korrekturen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
+
+Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen? [Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
