--- a/blog/_posts/de/2025-09-05-v4.22.0.md
+++ b/blog/_posts/de/2025-09-05-v4.22.0.md
@@ -28,3 +28,5 @@ Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das
 - Es wurde eine Problemumgehung für das Problem in Outlook Web und New Outlook für Windows hinzugefügt, das dazu führte, dass mehrere Signaturen zu Terminen hinzugefügt wurden.
 - Das Add-In muss nun zwingend die Graph-API für Exchange Online-Postfächer verwenden, um die Abkündigung von EWS vorzubereiten.
 - Die Ausgabevariable für benutzerdefinierte Regeln wurde von '`customRulesProperties`'
+
+Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen? [Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
