--- a/blog/_posts/de/2025-10-18-v4.23.0.md
+++ b/blog/_posts/de/2025-10-18-v4.23.0.md
@@ -45,3 +45,5 @@ Details zur Umsetzung finden Sie in unserem [FAQ zur Postadressen-Formatierung](
 - Behoben: Ein Fehler bei der kultursensitiven Sortierung im Intune-Remediation-Beispielskript wurde ausgebessert.
 
 Eine komplette Liste aller Änderungen, Abhängigkeiten und Fehlerbehebungen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
+
+Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen? [Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
