--- a/blog/_posts/2025-07-17-v4.20.3.en.md
+++ b/blog/_posts/2025-07-17-v4.20.3.en.md
@@ -18,4 +18,5 @@ permalink: /blog/:year/:month/:day/:slug/
 
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
-Interested in learning more or seeing our solution in action? [Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
+## Interested in learning more or seeing our solution in action?
+[Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
