--- a/blog/_posts/2025-09-05-v4.22.0.de.md
+++ b/blog/_posts/2025-09-05-v4.22.0.de.md
@@ -29,4 +29,5 @@ Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das
 - Das Add-In muss nun zwingend die Graph-API für Exchange Online-Postfächer verwenden, um die Abkündigung von EWS vorzubereiten.
 - Die Ausgabevariable für benutzerdefinierte Regeln wurde von '`customRulesProperties`'
 
-Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen? [Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
+[Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
