docs(blog): 2025-10-18-v4.23.0 rephrasing

--- a/blog/_posts/2025-10-18-v4.23.0.de.md
+++ b/blog/_posts/2025-10-18-v4.23.0.de.md
@@ -38,7 +38,7 @@ Sie geben die Adresskomponenten (über 20 stehen zur Verfügung) und den Länder
 
 Details zur Umsetzung finden Sie in unserem [FAQ zur Postadressen-Formatierung](https://set-outlooksignatures.com/faq/#4413-format-postal-addresses).
 
-## Andere wichtige Neuerungen
+## Andere wichtige Verbesserungen
 - QR-Code-Update: Das Beispiel-QR-Code-Format wurde von MeCard auf das gängigere vCard-Format umgestellt.
 - Sicherheit: Zu allen administrativen Skripten wurde eine Prüfung auf den PowerShell Full Language Mode hinzugefügt.
 - Behoben: Ein Fehler bei der kultursensitiven Sortierung im Intune-Remediation-Beispielskript wurde ausgebessert.
