--- a/blog/_posts/2025-10-18-v4.23.0.en.md
+++ b/blog/_posts/2025-10-18-v4.23.0.en.md
@@ -38,7 +38,7 @@ Input named address components (over 20 available) and the country code to outpu
 
 For implementation details, see our [Format Postal Addresses FAQ](https://set-outlooksignatures.com/faq/#4413-format-postal-addresses).
 
-## Other key changes
+## Other key enhancements
 * QR Code Update: The sample QR code format has changed from MeCard to the more common vCard format.
 * Security: Added a check for PowerShell Full Language Mode to all administrative scripts.
 * Fix: Corrected an issue with culture-aware sorting in the Intune remediation sample script.
