--- a/blog/_posts/2025-07-08-v4.20.2.en.md
+++ b/blog/_posts/2025-07-08-v4.20.2.en.md
@@ -21,4 +21,4 @@ This hotfix addresses this change as follws:
 For a comprehensive list of all changes, dependencies, and fixes, please consult the official [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Interested in learning more or seeing our solution in action?
-[Contact us](/contact) or explore further on our [website](/). We look forward to connecting with you!
+[Contact us](/contact/) or explore further on our [website](/). We look forward to connecting with you!
