--- a/blog/_posts/2025-08-15-v4.21.0.de.md
+++ b/blog/_posts/2025-08-15-v4.21.0.de.md
@@ -28,4 +28,4 @@ Weitere Informationen finden Sie unter '`.\sample code\CustomRulesCode.js`' im O
 Eine umfassende Liste aller Änderungen, Abhängigkeiten und Korrekturen finden Sie im offiziellen [CHANGELOG](https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/blob/main/docs/CHANGELOG.md).
 
 ## Möchten Sie mehr erfahren oder unsere Lösung in Aktion sehen?
-[Kontaktieren Sie uns](/contact) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
+[Kontaktieren Sie uns](/contact/) oder erfahren Sie mehr auf unserer [Website](/). Wir freuen uns darauf, mit Ihnen in Kontakt zu treten!
