chore: update lang and locale

--- a/blog/_posts/2025-07-08-v4.20.2.de.md
+++ b/blog/_posts/2025-07-08-v4.20.2.de.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: de
-locale: de
+lang: "de"
+locale: "de"
 title: "Neue Hotfix-Version v4.20.2"
 description: "Aktualisierung der Behandlung des Zeichens '@' in Signaturnamen"
 published: true
