--- a/blog/_posts/2025-07-08-v4.20.2.en.md
+++ b/blog/_posts/2025-07-08-v4.20.2.en.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: en
-locale: en
+lang: "en"
+locale: "en"
 title: "New hotfix release v4.20.2"
 description: "Update handling of the '@' character in signatures names"
 published: true
