--- a/blog/_posts/2025-08-12-v4.20.4.de.md
+++ b/blog/_posts/2025-08-12-v4.20.4.de.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: de
-locale: de
+lang: "de"
+locale: "de"
 title: "Neue Hotfix-Version v4.20.4"
 description: "Behebung von Änderungen in der Roaming-Signaturen-API von Microsoft"
 published: true
