--- a/blog/_posts/2025-08-15-v4.21.0.de.md
+++ b/blog/_posts/2025-08-15-v4.21.0.de.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: de
-locale: de
+lang: "de"
+locale: "de"
 title: "Neue Version v4.21.0"
 description: "Neue Funktionen für das Outlook-Add-In"
 published: true
