--- a/blog/_posts/2025-10-18-v4.23.0.de.md
+++ b/blog/_posts/2025-10-18-v4.23.0.de.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: de
-locale: de
+lang: "de"
+locale: "de"
 title: "Neue Version v4.23.0"
 description: "Formatieren von Addressen und Telefonnummern leicht gemacht"
 published: true
