--- a/blog/_posts/2025-06-18-v4.20.0.de.md
+++ b/blog/_posts/2025-06-18-v4.20.0.de.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: de
-locale: de
+lang: "de"
+locale: "de"
 title: "Neue Version v4.20.0"
 description: "Cross-Tenant-Zugriff und Multitenant Organisationen"
 published: true
