--- a/blog/_posts/2025-06-18-v4.20.0.en.md
+++ b/blog/_posts/2025-06-18-v4.20.0.en.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: en
-locale: en
+lang: "en"
+locale: "en"
 title: "New release v4.20.0"
 description: "Cross-tenant access and Multitenant Organizations"
 published: true
