--- a/blog/_posts/2025-06-26-v4.20.1.de.md
+++ b/blog/_posts/2025-06-26-v4.20.1.de.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: de
-locale: de
+lang: "de"
+locale: "de"
 title: "Neue Hotfix-Version v4.20.1"
 description: "Korrektur der Signatur-Bereinigung"
 published: true
