--- a/blog/_posts/2025-06-26-v4.20.1.en.md
+++ b/blog/_posts/2025-06-26-v4.20.1.en.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: en
-locale: en
+lang: "en"
+locale: "en"
 title: "New hotfix release v4.20.1"
 description: "Corrections for cleaning up signatures"
 published: true
