--- a/blog/_posts/2025-07-17-v4.20.3.de.md
+++ b/blog/_posts/2025-07-17-v4.20.3.de.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: de
-locale: de
+lang: "de"
+locale: "de"
 title: "Neue Hotfix-Version v4.20.3"
 description: "Korrekturen für PowerShell-Eigenheiten und SimulateAndDeploy"
 published: true
