--- a/blog/_posts/2025-08-12-v4.20.4.en.md
+++ b/blog/_posts/2025-08-12-v4.20.4.en.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: en
-locale: en
+lang: "en"
+locale: "en"
 title: "New hotfix release v4.20.4"
 description: " Addressing changes in Microsofts roaming signatures API"
 published: true
