--- a/blog/_posts/2025-08-15-v4.21.0.en.md
+++ b/blog/_posts/2025-08-15-v4.21.0.en.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: en
-locale: en
+lang: "en"
+locale: "en"
 title: "New release v4.21.0"
 description: "New features for the Outlook add-in"
 published: true
