--- a/blog/_posts/2025-09-05-v4.22.0.de.md
+++ b/blog/_posts/2025-09-05-v4.22.0.de.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: de
-locale: de
+lang: "de"
+locale: "de"
 title: "Neue Version v4.22.0"
 description: "Weitere Anpassungsmöglichkeiten für das Outlook-Add-In"
 published: true
