--- a/blog/_posts/2025-09-05-v4.22.0.en.md
+++ b/blog/_posts/2025-09-05-v4.22.0.en.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-lang: en
-locale: en
+lang: "en"
+locale: "en"
 title: "New release v4.22.0"
 description: "More Outlook add-in customization"
 published: true
