chore: update lang and locale

--- a/404.de.md
+++ b/404.de.md
@@ -1,9 +1,9 @@
 ---
-layout: page
+layout: "page"
 lang: "de"
 locale: "de"
-title: '<img src="/assets/images/explicit consulting, color on transparent, company and slogan.png" alt="ExplicIT Consulting. We bridge the gap." class="mb-2" style="height: 3em; object-fit: contain; margin-left:-0.25em;"><!--ExplicIT Consulting. We bridge the gap.-->'
-subtitle: |
+title: "'<img src="/assets/images/explicit consulting, color on transparent, company and slogan.png" alt="ExplicIT Consulting. We bridge the gap." class="mb-2" style="height: 3em; object-fit: contain; margin-left:-0.25em;"><!--ExplicIT Consulting. We bridge the gap.-->'"
+subtitle: "|"
   <p class="subtitle is-4 has-text-white mt-6 mb-2">
     <span style="background-color: rgba(0, 0, 0, 0.4);">Tja, diese Lücke konnten wir eindeutig nicht schließen…</span>
   </p>
@@ -11,12 +11,12 @@ subtitle: |
   <p class="subtitle is-4 has-text-white mt-2 mb-2">
     <span style="background-color: rgba(0, 0, 0, 0.4);">Wenn Sie glauben, dass auf unserer Seite ein Fehler vorliegt:</span> <a href="mailto:set-outlooksignatures@explicitconsulting.at" class="button is-link is-normal is-hovered has-text-black has-text-weight-bold" style="background-color: limegreen">Lassen Sie es uns wissen</a>
   </p>
-description: HTTP Fehler 404. Seite nicht gefunden. Sorry.
+description: "HTTP Fehler 404. Seite nicht gefunden. Sorry."
 hero_image: "/assets/images/broken bridge.jpg"
 hero_height: is-fullheight-with-navbar
 hero_darken: true
 page_id: "404"
-permalink: /404.html
+permalink: "/404.html"
 sitemap: false
 ---
 <script>
