--- a/blog/_posts/2025-06-26-v4.20.1.de.md
+++ b/blog/_posts/2025-06-26-v4.20.1.de.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "de"
 locale: "de"
 title: "Neue Hotfix-Version v4.20.1"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-1"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## Korrekturen zur Bereinigung von Signaturen
 Dieser Hotfix behebt Probleme mit den Parametern '`DeleteScriptCreatedSignaturesWithoutTemplate`' und '`DeleteUserCreatedSignatures`'.
