--- a/blog/_posts/2025-07-08-v4.20.2.en.md
+++ b/blog/_posts/2025-07-08-v4.20.2.en.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "en"
 locale: "en"
 title: "New hotfix release v4.20.2"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-2"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## Update handling of the '@' character in signatures names
 Microsoft no longer allows '@' in roaming signature names as it is reserved for internal use, and Microsoft Outlook will follow soon.
