--- a/blog/_posts/2025-07-17-v4.20.3.de.md
+++ b/blog/_posts/2025-07-17-v4.20.3.de.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "de"
 locale: "de"
 title: "Neue Hotfix-Version v4.20.3"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-3"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## Korrekturen für PowerShell-Eigenheiten und SimulateAndDeploy
 - Hinzufügen einer Problemumgehung für PowerShell 5.1, das Arrays bei der Übergabe über den InputObject-Parameter nicht korrekt in JSON konvertiert. (<a href="https://github.com/Set-OutlookSignatures/Set-OutlookSignatures/issues/136" target="_blank">#136</a>)
