--- a/blog/_posts/2025-08-15-v4.21.0.de.md
+++ b/blog/_posts/2025-08-15-v4.21.0.de.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "de"
 locale: "de"
 title: "Neue Version v4.21.0"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-21-0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## Neue Funktionen für das Outlook-Add-In
 Neue LaunchEvents und benutzerdefinierter Code zur Auswahl von Signaturen:
