--- a/blog/_posts/2025-08-15-v4.21.0.en.md
+++ b/blog/_posts/2025-08-15-v4.21.0.en.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "en"
 locale: "en"
 title: "New release v4.21.0"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-21-0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## New features for the Outlook add-in
 New launch events and custom code support:
