--- a/blog/_posts/2025-09-05-v4.22.0.en.md
+++ b/blog/_posts/2025-09-05-v4.22.0.en.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "en"
 locale: "en"
 title: "New release v4.22.0"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-22-0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## More Outlook add-in customization
 The v4.22.0 release brings major changes and customization features to the Outlook add-in:
