--- a/blog/_posts/2025-10-18-v4.23.0.en.md
+++ b/blog/_posts/2025-10-18-v4.23.0.en.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "en"
 locale: "en"
 title: "New release v4.23.0"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-23-0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## Goodbye formatting headaches with addresses and phone numbers, hello global standards
 Set-OutlookSignatures v4.23.0 is here, delivering a major upgrade focused on two common - and surprisingly complex - pain points in global IT: Perfectly formatting phone numbers and postal addresses.
