--- a/404.en.md
+++ b/404.en.md
@@ -1,9 +1,9 @@
 ---
-layout: page
+layout: "page"
 lang: "en"
 locale: "en"
-title: '<img src="/assets/images/explicit consulting, color on transparent, company and slogan.png" alt="ExplicIT Consulting. We bridge the gap." class="mb-2" style="height: 3em; object-fit: contain; margin-left:-0.25em;"><!--ExplicIT Consulting. We bridge the gap.-->'
-subtitle: |
+title: "'<img src="/assets/images/explicit consulting, color on transparent, company and slogan.png" alt="ExplicIT Consulting. We bridge the gap." class="mb-2" style="height: 3em; object-fit: contain; margin-left:-0.25em;"><!--ExplicIT Consulting. We bridge the gap.-->'"
+subtitle: "|"
   <p class="subtitle is-4 has-text-white mt-6 mb-2">
     <span style="background-color: rgba(0, 0, 0, 0.4);">Well, we clearly could not bridge this gap…</span>
   </p>
@@ -11,12 +11,12 @@ subtitle: |
   <p class="subtitle is-4 has-text-white mt-2 mb-2">
     <span style="background-color: rgba(0, 0, 0, 0.4);">If you think that there is an error on our end:</span> <a href="mailto:set-outlooksignatures@explicitconsulting.at" class="button is-link is-normal is-hovered has-text-black has-text-weight-bold" style="background-color: limegreen">Let us know</a>
   </p>
-description: HTTP error 404. Site not found. Tut uns leid.
+description: "HTTP error 404. Site not found. Tut uns leid."
 hero_image: "/assets/images/broken bridge.jpg"
 hero_height: is-fullheight-with-navbar
 hero_darken: true
 page_id: "404"
-permalink: /404.html
+permalink: "/404.html"
 sitemap: false
 ---
 <script>
