--- a/blog/_posts/2025-06-18-v4.20.0.de.md
+++ b/blog/_posts/2025-06-18-v4.20.0.de.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "de"
 locale: "de"
 title: "Neue Version v4.20.0"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## Mandantenübergreifender Zugriff und mandantenfähige Organisationen
 Die Notwendigkeit eines mandantenübergreifenden Zugriffs auf Postfächer – sei es aufgrund einer Fusion, einer Übernahme oder einer komplexen Organisationsstruktur – stellt die meisten herkömmlichen Signaturlösungen vor Probleme. Warum? Weil ihre Architektur dafür einfach nicht ausgelegt ist. Set-OutlookSignatures löst dieses Problem. Die Version 4.20.0 bietet nun eine vollständige mandantenübergreifende Unterstützung, die nahtlos funktioniert.
