--- a/blog/_posts/2025-06-18-v4.20.0.en.md
+++ b/blog/_posts/2025-06-18-v4.20.0.en.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "en"
 locale: "en"
 title: "New release v4.20.0"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## Cross-tenant access and Multitenant Organizations
 The need for cross-tenant mailbox access—whether for a merger, acquisition, or complex organization—breaks most traditional signature solutions. Why? Because their architecture simply can't handle it. Set-OutlookSignatures solves this. Rleease v4.20.0 introduces full cross-tenant support that works seamlessly.
