--- a/blog/_posts/2025-07-08-v4.20.2.de.md
+++ b/blog/_posts/2025-07-08-v4.20.2.de.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "de"
 locale: "de"
 title: "Neue Hotfix-Version v4.20.2"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-20-2"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## Aktualisierung der Behandlung des Zeichens '@' in Signaturnamen
 Microsoft erlaubt '@' nicht mehr in Roaming-Signaturnamen, da es für die interne Verwendung reserviert ist, und Microsoft Outlook wird bald folgen.
