--- a/blog/_posts/2025-09-05-v4.22.0.de.md
+++ b/blog/_posts/2025-09-05-v4.22.0.de.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "de"
 locale: "de"
 title: "Neue Version v4.22.0"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-22-0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## Weitere Anpassungsmöglichkeiten für das Outlook-Add-In
 Die Version 4.22.0 bringt wichtige Änderungen und Anpassungsfunktionen für das Outlook Add-In:
