--- a/blog/_posts/2025-10-18-v4.23.0.de.md
+++ b/blog/_posts/2025-10-18-v4.23.0.de.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: "post"
 lang: "de"
 locale: "de"
 title: "Neue Version v4.23.0"
@@ -8,7 +8,7 @@ published: true
 author: Markus Gruber
 tags: ["new release"]
 slug: "v4-23-0"
-permalink: /blog/:year/:month/:day/:slug/
+permalink: "/blog/:year/:month/:day/:slug/"
 ---
 ## Adieu Formatierungs-Stress für Adressen und Telefonnummern, servus globale Standards
 Set-OutlookSignatures v4.23.0 ist da und liefert ein großes Update, das sich auf zwei gängige - und überraschend komplizierte – Stolpersteine in der globalen IT konzentriert: Die perfekte Formatierung von Telefonnummern und Postanschriften.
