chore: update lang and locale

--- a/404.en.md
+++ b/404.en.md
@@ -2,8 +2,8 @@
 layout: "page"
 lang: "en"
 locale: "en"
-title: "'<img src="/assets/images/explicit consulting, color on transparent, company and slogan.png" alt="ExplicIT Consulting. We bridge the gap." class="mb-2" style="height: 3em; object-fit: contain; margin-left:-0.25em;"><!--ExplicIT Consulting. We bridge the gap.-->'"
-subtitle: "|"
+title: '<img src="/assets/images/explicit consulting, color on transparent, company and slogan.png" alt="ExplicIT Consulting. We bridge the gap." class="mb-2" style="height: 3em; object-fit: contain; margin-left:-0.25em;"><!--ExplicIT Consulting. We bridge the gap.-->'
+subtitle: |
   <p class="subtitle is-4 has-text-white mt-6 mb-2">
     <span style="background-color: rgba(0, 0, 0, 0.4);">Well, we clearly could not bridge this gap…</span>
   </p>
